fix: improved error handling
